--- a/custom.css
+++ b/custom.css
@@ -12,14 +12,14 @@ html {
     position: relative;
 
     /* 내용 글씨관련 */
-    font-weight: bold;
-    font-size: 18px;
+    font-weight: 700;
+    font-size: 17px;
     text-align: center;
     word-break: keep-all;
 }
 .img1 {
     background-image: url("sandwich/cheese1.png");
-    color: rgb(73, 73, 73);
+    color: rgb(139, 92, 92);
 }
 .img2 {
     background-image: url("sandwich/ham.png");
@@ -29,7 +29,7 @@ html {
 }
 .img3 {
     background-image: url("sandwich/onion.png");
-    color: rgb(73, 73, 73);
+    color: rgb(139, 92, 92);
 }
 .img4 {
     background-image: url("sandwich/vege.png");
@@ -41,15 +41,15 @@ html {
 }
 .img6 {
     background-image: url("sandwich/cheese2.png");
-    color: rgb(73, 73, 73);
+    color: rgb(139, 92, 92);
 }
 .img7 {
     background-image: url("sandwich/paprica.png");
-    color: rgb(73, 73, 73);
+    color: rgb(139, 92, 92);
 }
 .img8 {
     background-image: url("sandwich/egg.png");
-    color: rgb(73, 73, 73);
+    color: rgb(139, 92, 92);
 }
 
 .flex-row {
@@ -78,6 +78,8 @@ html {
     flex-wrap: wrap;
 }
 .msg {
-    margin: -10px 0 30px;
-    color: black;
+    margin: -60px 0 20px;
+    color: rgba(236, 179, 126, 0.863);
+    position: sticky;
+    top: 100px
 }
