--- a/custom.css
+++ b/custom.css
@@ -10,6 +10,14 @@ html {
     align-items: center;
     justify-content: center;
 }
+
+body {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
 .bg {
     background-image: url("sandwich/bread2.png");
     background-repeat: no-repeat;
